# timerangeparser

./: LICENSE.txt  README.md  check_mypy.sh  pyproject.toml
src/timerangeparser/: parser.py  parser_test.py  types.py
